syntax = "proto3";
package configmodel;

// option java_multiple_files = true;
// option java_package = "io.grpc.configmodel";
// option java_outer_classname = "ConfigModel";
option go_package = "./configmodel";


service ModelManage {
  rpc SaveModel (Model) returns (OpRet) {}
  rpc DeleteModel (Model) returns (OpRet) {}
  rpc UpdateModel (Model) returns (OpRet) {}
  rpc FindModels (Filter) returns (stream Model) {}
}

// Model definition.
message Model {
  string name = 1;
  repeated Sample sample = 2;
  repeated Query query = 3;
  repeated Tweak tweak = 4;
}

message OpRet {
  string msg = 1;
}

message Sample {
  string sensor = 1;
  uint32 rate = 2;
}

message Query {
  string sensor = 1;
}

message Tweak {
  string register = 1;
  int32 value = 2;
}

message Filter {
  string filter = 1;
}
